--- a/assingments/ass2.ipynb
+++ b/assingments/ass2.ipynb
@@ -413,6 +413,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2211d463",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "for num in lst:\n",
+    "    if num % 3 != 0:\n",
+    "        continue\n",
+    "    print(num)\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5b42c280",
    "metadata": {},
@@ -439,6 +464,41 @@
     "\n",
     "# even_numbers = [num for num in range(10) if num % 2 == 0]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "45174ee5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n",
+      "16.0\n",
+      "36.0\n",
+      "64.0\n",
+      "100.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "lst = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "even_numbers = [num for num in lst if num % 2 == 0]\n",
+    "\n",
+    "for num in even_numbers:\n",
+    "    print(math.pow(num, 2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e614d10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
